Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <section id="main_content" class="inner">
         <h3>
 <a id="welcome-to-the-single-molecule-biophysics-plugins-for-imagej-website" class="anchor" href="#welcome-to-the-single-molecule-biophysics-plugins-for-imagej-website" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Single Molecule Biophysics plugins for ImageJ website</h3>
+
+<p>To install the Single Molecule Biophysics plugins for ImageJ download the zip file and extract the compiled single_molecule_biophysics.jar file from the jar folder. Copy this file to the plugins folder of ImageJ. After restarting ImageJ the plugins will be visible in the Plugins menu.</p>
       </section>
     </div>
 
